--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <script src="/js/jquery-3.2.1.js"></script>
 
-<link rel="stylesheet" type="text/css" href="/style/main.css">
-<link rel="stylesheet" type="text/css" href="/style/animate.css">
+<link rel="stylesheet" type="text/css" href="style/main.css">
+<link rel="stylesheet" type="text/css" href="style/animate.css">
 
 <title>Reddit</title>
 </head>
