--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<script src="/js/jquery-3.2.1.js"></script>
+<script src="js/jquery-3.2.1.js"></script>
 
 <link rel="stylesheet" type="text/css" href="style/main.css">
 <link rel="stylesheet" type="text/css" href="style/animate.css">
@@ -69,7 +69,7 @@
 
 </div>
 </div>
-<script src="/js/app.js"></script>
+<script src="js/app.js"></script>
 <script>init();</script>
 </body>
 </html>
